// wiki.db schema (SQLite STRICT) — ERD mirror of wiki.sql (same directory).
//
// Reflects the CURRENT schema after the raw-article synthesis path was retired:
//   - identity + page shell: entities / pages / aliases / processed_items /
//     rejected_entities
//   - attributed lane (claim-centric): sources / claims / claim_entities
//
// Enums below are TEXT + CHECK in SQLite (STRICT has no native enum); modelled
// as Enum here for the diagram. Paste into https://dbdiagram.io to render.

Enum processed_status {
  ok
  error
  skipped
}

Enum provenance {
  source
  user
  derived
}

Enum stance {
  reported
  opinion
}

// ---- identity + page shell ----

Table entities {
  entity_id       text [pk, note: 'e_<16hex> opaque surrogate, minted once']
  canonical_name  text [not null]
  normalized_name text [not null, unique, note: 'lower/trim/collapse-ws dedup key']
  slug            text [not null]
  entity_type     text [not null, note: 'open-domain type label (metadata, not identity)']
  created_at      text [not null]
}

Table pages {
  entity_id       text [pk, ref: - entities.entity_id]
  file_path       text [not null, unique, note: 'flat {slug}-{shortid}.md']
  related_ids     text [note: 'JSON array of related entity_ids (advisory)']
  updated_at      text [not null]
  Note: 'One rendered-page record per entity (1:1).'
}

Table aliases {
  alias            text [not null, note: 'display form']
  normalized_alias text [pk, note: 'globally-unique match key']
  entity_id        text [not null, ref: > entities.entity_id]
  indexes {
    entity_id [name: 'idx_aliases_entity_id']
  }
}

// No co-occurrence table: the rendered `related` list is derived at read time
// from claim_entities (get_related_for_entity), not stored as edges.

Table processed_items {
  item_id      text [not null]
  source_type  text [not null]
  status       processed_status [not null]
  error        text
  processed_at text [not null]
  indexes {
    (item_id, source_type) [pk]
  }
  Note: 'Per (item, source) processing-attempt ledger.'
}

Table rejected_entities {
  normalized_name text [pk, note: 'match key: lower/trim/collapse-ws']
  category        text
  reason          text
  rejected_at     text [not null]
  Note: 'Authored curator denylist. Survives a from-empty rebuild.'
}

// ---- attributed lane (additive) ----

Table sources {
  source_id    text [pk, note: 'src_<16hex>']
  content_key  text [not null, unique, note: 'normalized canonical URL / <source>::<url>']
  origin_type  text [not null, note: 'queue / raw_store / session / research']
  title        text
  author       text
  publication  text [note: 'e.g. the Medium publication, for attribution']
  url          text
  published_at text [note: 'ISO-8601 date or null']
  content_hash text [note: 'fetched-body hash — detect article change']
  fetched_at   text
  added_at     text [not null]
  synthesized_at text [note: 'max(extracted_at) consumed by the last sweep; null = never synthesized (incremental watermark)']
  Note: 'Source registry + attribution metadata. Write helper UPSERTs on content_key.'
}

Table claims {
  claim_id   text [pk, note: 'clm_<16hex>']
  source_id  text [not null, ref: > sources.source_id, note: 'ON DELETE CASCADE']
  text       text [not null]
  text_hash  text [not null, note: 'sha256(normalized text)']
  provenance provenance [not null]
  stance     stance [note: 'NULL unless provenance = source — only a source has a stance']
  created_at text [not null]
  indexes {
    (source_id, text_hash) [unique, name: 'uq_claim_idempotency']
    source_id [name: 'idx_claims_source']
  }
  Note: 'Atomic attributed claim. UNIQUE(source_id, text_hash) = idempotent re-run. Table CHECK not expressible in DBML: (provenance = \'source\') = (stance IS NOT NULL) — only a source has a stance, so (user, reported) and (source, NULL) are both rejected.'
}

Table claim_entities {
  claim_id  text [not null, ref: > claims.claim_id, note: 'ON DELETE CASCADE']
  entity_id text [not null, ref: > entities.entity_id, note: 'ON DELETE CASCADE']
  indexes {
    (claim_id, entity_id) [pk]
    (entity_id, claim_id) [name: 'idx_claim_entities_entity']
  }
  Note: 'Many-to-many bridge: claim -> subject entity(ies), 0..N.'
}
